fix create ticket text box flickering and resizing on view instantiation

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -626,7 +626,7 @@ form .outerWrap {
 
   #ticketForm form textarea {
     width: 100%;
-    height: 200px;
+    height: 150px;
   }
 
   #ticketForm form .seperator {
